nav text contrast issue

--- a/proyecto-1/public_html/css/style.css
+++ b/proyecto-1/public_html/css/style.css
@@ -93,6 +93,14 @@
 	color:white;
 	
 }
+
+.navbar-default .navbar-nav > li > a {
+    color:white;
+}
+
+.navbar-default .navbar-brand{
+    color:white;
+}
 .navegability ul li:first-child{
 	color:grey;
 	text-decoration:none;
